finish edit all api
